# presidium-messenger

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/presidium-bridge/: Cargo.toml
crates/presidium-bridge/src/: lib.rs
crates/presidium-core/: Cargo.toml
crates/presidium-core/src/: lib.rs
crates/presidium-core/src/application/: mod.rs
crates/presidium-core/src/application/ports/: mod.rs
crates/presidium-core/src/config/: mod.rs
crates/presidium-core/src/domain/: mod.rs
crates/presidium-core/src/domain/entities/: mod.rs
crates/presidium-core/src/domain/errors/: mod.rs
crates/presidium-core/src/domain/events/: mod.rs
crates/presidium-core/src/domain/value_objects/: mod.rs
crates/presidium-core/src/infrastructure/: mod.rs
crates/presidium-core/src/infrastructure/adapters/: mod.rs
crates/presidium-core/src/observability/: mod.rs
crates/presidium-core/tests/: architecture.rs
crates/presidium-crypto/: Cargo.toml
crates/presidium-crypto/src/: lib.rs
crates/presidium-crypto/src/application/: mod.rs
crates/presidium-crypto/src/application/generate_keys/: mod.rs
crates/presidium-crypto/src/domain/: mod.rs
crates/presidium-crypto/src/domain/keypair/: mod.rs
crates/presidium-crypto/src/domain/pre_key/: mod.rs
crates/presidium-crypto/src/infrastructure/: mod.rs
crates/presidium-crypto/src/infrastructure/adapters/: mod.rs
crates/presidium-llm/: Cargo.toml
crates/presidium-llm/src/: lib.rs
crates/presidium-llm/src/application/: mod.rs
crates/presidium-llm/src/application/ports/: mod.rs
crates/presidium-llm/src/domain/: mod.rs
crates/presidium-llm/src/domain/inference/: mod.rs
crates/presidium-llm/src/domain/model/: mod.rs
crates/presidium-llm/src/infrastructure/: mod.rs
crates/presidium-llm/src/infrastructure/adapters/: mod.rs
crates/presidium-messaging/: Cargo.toml
crates/presidium-messaging/src/: lib.rs
crates/presidium-messaging/src/application/: mod.rs
crates/presidium-messaging/src/application/send_message/: mod.rs
crates/presidium-messaging/src/domain/: mod.rs
crates/presidium-messaging/src/domain/commands/: mod.rs
crates/presidium-messaging/src/domain/dtos/: mod.rs
crates/presidium-p2p/: Cargo.toml
crates/presidium-p2p/src/: lib.rs
crates/presidium-p2p/src/application/: mod.rs
crates/presidium-p2p/src/application/ports/: mod.rs
crates/presidium-p2p/src/domain/: mod.rs
crates/presidium-p2p/src/domain/peer/: mod.rs
crates/presidium-p2p/src/infrastructure/: mod.rs
crates/presidium-p2p/src/infrastructure/adapters/: mod.rs
crates/presidium-storage/: Cargo.toml
crates/presidium-storage/src/: lib.rs
crates/presidium-storage/src/application/: mod.rs
crates/presidium-storage/src/application/ports/: mod.rs
crates/presidium-storage/src/domain/: mod.rs
crates/presidium-storage/src/domain/schema/: mod.rs
crates/presidium-storage/src/infrastructure/: mod.rs
crates/presidium-storage/src/infrastructure/adapters/: mod.rs
docs/: project-status.md
docs/adr/: 0001-rust-workspace-setup.md  0001-use-workspace-hexagonal.md  0002-hexagonal-ports-definition.md  0003-clean-architecture-layers.md
presidium-bridge/: Cargo.toml
presidium-core/: Cargo.toml
presidium-core/src/application/: mod.rs
presidium-core/src/application/ports/: mod.rs  moderation_port.rs
presidium-core/src/domain/: aggregates.rs  entities.rs  errors.rs  events.rs  mod.rs  value_objects.rs
presidium-core/src/infrastructure/: mod.rs
presidium-core/src/infrastructure/adapters/: local_moderation_adapter.rs  mod.rs
presidium-crypto/: Cargo.toml
presidium-crypto/src/application/: mod.rs  ports.rs
presidium-crypto/src/domain/: errors.rs
presidium-crypto/src/infrastructure/: mod.rs
presidium-crypto/src/infrastructure/adapters/: libsignal_crypto_adapter.rs  mod.rs
presidium-llm/: Cargo.toml
presidium-llm/src/application/: mod.rs  ports.rs
presidium-llm/src/domain/: errors.rs
presidium-llm/src/infrastructure/: mod.rs
presidium-llm/src/infrastructure/adapters/: candle_llm_adapter.rs  mod.rs
presidium-messaging/: Cargo.toml
presidium-messaging/src/: lib.rs
presidium-messaging/src/application/: mod.rs
presidium-messaging/src/application/use_cases/: mod.rs  send_message.rs
presidium-messaging/src/domain/: aggregates.rs  entities.rs  errors.rs  events.rs  mod.rs  value_objects.rs
presidium-messaging/src/infrastructure/: di.rs
presidium-messaging/src/interfaces/: mod.rs
presidium-messaging/tests/: send_message_test.rs
presidium-p2p/: Cargo.toml
presidium-p2p/src/application/: mod.rs  ports.rs
presidium-p2p/src/domain/: errors.rs
presidium-p2p/src/infrastructure/: mod.rs
presidium-p2p/src/infrastructure/adapters/: libp2p_network_adapter.rs  mod.rs
presidium-storage/: Cargo.toml
presidium-storage/src/application/: mod.rs  ports.rs
presidium-storage/src/domain/: errors.rs
presidium-storage/src/infrastructure/: mod.rs
presidium-storage/src/infrastructure/adapters/: mod.rs  redb_storage_adapter.rs
scripts/: check_layer_deps.sh  ci-checks.sh  setup.sh
