[workspace]
resolver = "2"
members = [
    "presidium-core",
    "presidium-crypto",
    "presidium-p2p",
    "presidium-storage",
    "presidium-llm",
    "presidium-messaging",
    "presidium-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/StepanBorodulin/presidium-messenger"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
tokio = { version = "1", features = ["full"] }
mockall = "0.13"
