[package]
name = "presidium-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "UniFFI bridge for Kotlin Multiplatform / Swift interop"

[dependencies]
presidium-core = { path = "../presidium-core" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
