[package]
name = "presidium-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain entities, application ports, and configuration for Presidium Messenger"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
