[package]
name = "presidium-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic operations for Presidium Messenger — E2EE via Signal Protocol"

[dependencies]
presidium-core = { path = "../presidium-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }

[lints]
workspace = true
