[package]
name = "presidium-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "On-device LLM inference for Presidium Messenger — moderation and AI assistant"

[dependencies]
presidium-core = { path = "../presidium-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
